--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/dorian-tech/networkerlib"
+    "url": "networkerlib"
   }
 }
